# OmniGateway

./: .env  .gitignore  .gitmodules  Contribute.md  Makefile  docker-compose.yml  pytest.ini
.github/workflows/: pytest-integration.yml
app/: main.py  test_getway.py
app/api/: routes.py  schemas.py
app/core/: config.py
app/services/: llm_service.py
integration_tests/: basic.py
local_embedding_service/: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.check  ONNX_SETUP.md  README.md  ROLE.md  USE_GUIDE.md  check_embedding_service.sh  embedding.grpc.pb.h  embedding.pb.h  main.cpp  test_all_features.sh  使用方法.md
local_embedding_service/include/: bert_tokenizer.h  embedding_backend.h  embedding_service_impl.h  mock_embedding_backend.h  mock_rerank_backend.h  onnx_embedding_backend.h  onnx_rerank_backend.h  rerank_backend.h  tokenizer.h
local_embedding_service/proto/: embedding.proto
local_embedding_service/src/: bert_tokenizer.cpp  embedding_service_impl.cpp  main.cpp  mock_embedding_backend.cpp  mock_rerank_backend.cpp  onnx_embedding_backend.cpp  onnx_rerank_backend.cpp  tokenizer.cpp
upstream_service/: Dockerfile  requirements.txt  server.py
upstream_service/app/: main.py
upstream_service/app/agent/: __init__.py  graph.py  nodes.py  state.py  tool_executor.py  tools.py
upstream_service/app/api/: routes.py  schemas.py
upstream_service/app/core/: config.py
upstream_service/app/mcp/: __init__.py  client.py  registry.py
upstream_service/app/services/: llm_service.py  rag_service.py
upstream_service/tests/: mcp_sandbox.py  test_full_state_machine.py  test_graph.py  test_mcp_registry.py  test_memory_and_errors.py  test_rag.py  test_tool_orchestration.py  test_tools.py
